Recipe: fix picture overflow bug and removed unnecessary styles

--- a/client/stylesheets/globals/list-activities.import.less
+++ b/client/stylesheets/globals/list-activities.import.less
@@ -10,8 +10,8 @@
 }
 
 .list-activities {
-  overflow: hidden;
-  position: relative;
+  //overflow: hidden;
+  //position: relative;
   background: @color-rare;
   min-height: 16em;
 
@@ -23,6 +23,7 @@
   background: @color-empty;
   border-top: 1px solid @color-rare;
   display: block;
+  float: left;
   overflow: hidden;
   padding: .75em;
   position: relative;
