--- a/client/templates/recipe.import.less
+++ b/client/templates/recipe.import.less
@@ -101,7 +101,6 @@
   .btn-tertiary { display: block; }
 
   .content-scrollable {
-    background: @color-empty;
     top: 100%;
     margin-top: -1px; // Fixes flicker from animations behind content-scrollable
   }
